--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "minimist": "^1.2.0",
     "node-fetch": "^2.6.0",
     "simple-git": "^1.126.0",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "winston": "^3.2.1"
   }
 }
