--- a/package.json
+++ b/package.json
@@ -5,7 +5,19 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "build --dir",
+    "dist": "build"
+  },
+  "build": {
+    "appId": "your.id",
+    "mac": {
+      "category": "your.app.category.type",
+      "target": [
+        "zip",
+        "dmg"
+      ]
+    }
   },
   "repository": "https://github.com/mamajjo/company-status-validator",
   "keywords": [
@@ -20,7 +32,6 @@
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "configstore": "^5.0.0",
-    "electron": "^7.1.7",
     "figlet": "^1.2.4",
     "inquirer": "^7.0.1",
     "lodash": "^4.17.15",
@@ -30,5 +41,8 @@
     "simple-git": "^1.129.0",
     "touch": "^3.1.0",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "electron-builder": "^21.2.0"
   }
 }
